# the_essence_of_computing

./: CMakeLists.txt  README.md  build_lib.sh
just_run/: CMakeLists.txt  run_main.cpp
practice/: CMakeLists.txt
practice/part1/: CMakeLists.txt  e_1_3_find_max_subinterval_1.cpp  e_1_3_find_max_subinterval_2.cpp  e_1_3_find_max_subinterval_3.cpp  e_1_3_find_max_subinterval_4.cpp  eight_queens1.cpp  eight_queens2.cpp  eight_queens3.cpp  main.cpp
practice/part11/: 11_7_snippets_generation.cpp  11_8_k_sub_array.cpp  CMakeLists.txt  main.cpp  p_11_2_flip.cpp
practice/part2/: CMakeLists.txt  e_2_4_eight_queens2.cpp  e_2_4_eight_queens3.cpp  e_2_4_eight_queens4.cpp  e_2_5_calculator.cpp  main.cpp
practice/part3/: 3_1_gather_partition.cpp  CMakeLists.txt  main.cpp
practice/part4/: 4_4_work_n_n.cpp  CMakeLists.txt  e_4_5_n_char_merge.cpp  main.cpp
practice/part6/: 6_1_young_table.cpp  CMakeLists.txt  main.cpp
practice/part9/: 9_1_sort_bean.cpp  CMakeLists.txt  main.cpp
programming_skill/: CMakeLists.txt  align_main.cpp  func_param_skill.cpp  run_main.cpp  singleton.h
programming_skill/test/: CMakeLists.txt  singleton_main.cpp
test/: CMakeLists.txt
test/tools/: CMakeLists.txt  queue_test.cpp  string_test.cpp
tools/: CMakeLists.txt  ReadMe.md  algorithm.hpp  balance_plus_tree.h  balance_plus_tree2.h  balance_tree.h  balance_tree2.h  balance_tree_base.h  balance_tree_print_util.h  binary_avl_tree.h  binary_avl_tree2.h  binary_avl_tree3.h  binary_avl_tree_base.h  binary_avl_tree_util.h  binary_rb_tree.h  binary_rb_tree2.h  binary_rb_tree_.h  binary_rb_tree_base.h  binary_rb_tree_recursive.h  binary_rb_tree_recursive2.h  binary_sort_tree.h  binary_sort_tree2.h  binary_sort_tree3.h  binary_thread_tree.h  binary_thread_tree2.h  binary_tree.h  binary_tree2.h  binary_tree2_iterator.h  binary_tree_print_util.h  binary_tree_util.h  crc_check.cpp  crc_check.h  general.h  hash_func.h  hash_map.hpp  iterator_base.h  list.hpp  main.cpp  map.hpp  pair.hpp  (+12 more)
tools/balance_plus_tree/: ReadMe.md  balance_plus_tree.h  balance_plus_tree2.h  balance_plus_tree_recursive.h  balance_plus_tree_recursive2.h  balance_plus_tree_util_base.h  balance_plus_tree_util_base2.h
tools/balance_plus_tree_debug/: ReadMe.md  balance_plus_tree_debug.h  balance_plus_tree_debug2.h  balance_plus_tree_recursive_debug.h  balance_plus_tree_recursive_debug2.h  balance_plus_tree_util_base_debug.h  balance_plus_tree_util_base_debug2.h
tools/balance_tree/: B_TREE_README.md  ReadMe.md  balance_plus_tree.h  balance_plus_tree2.h  balance_tree.h  balance_tree2.h  balance_tree_base.h  balance_tree_base_debug.h  balance_tree_debug.h  balance_tree_print_util.h  balance_tree_print_util_debug.h  balance_tree_recursive.h  balance_tree_recursive2.h  balance_tree_util_base.h  balance_tree_util_base2.h
tools/balance_tree_debug/: ReadMe.md  balance_tree_base_debug.h  balance_tree_debug.h  balance_tree_debug2.h  balance_tree_print_util_debug.h  balance_tree_recursive_debug.h  balance_tree_recursive_debug2.h  balance_tree_util_base_debug.h  balance_tree_util_base_debug2.h
tools/balance_tree_v2_debug/: ReadMe.md  balance_tree_debug.h  balance_tree_debug2.h  balance_tree_print_util_debug.h  balance_tree_recursive_debug.h  balance_tree_recursive_debug2.h  balance_tree_util_base_debug.h  balance_tree_util_base_debug2.h
tools/binary_avl_tree/: ReadMe.md  binary_avl_tree.h  binary_avl_tree3.h  binary_avl_tree_base.h
tools/binary_rb_tree/: ReadMe.md  binary_rb_tree.h  binary_rb_tree2.h  binary_rb_tree_base.h  binary_rb_tree_recursive.h  binary_rb_tree_recursive2.h
tools/binary_sort_tree/: binary_sort_tree.h  binary_sort_tree_base.h
tools/lock_free_container/: ReadMe.md  kfifo.cpp  kfifo.h  mpmc_queue.h  queue_base.h  spsc_queue.h  spsc_queue.hpp  summary_of_point.md
tools/lock_free_container/auto_inc_lock_free_container/: lock_free_queue_v1.h  lock_free_queue_v2.h  lock_free_stack_v1.h  lock_free_stack_v2.h
tools/lock_free_container/documentation/: Documentation_memory-barriers.txt  Documentation_memory-barriers_cn.txt  whymb.2010.06.07c_cn.docx
tools/lock_free_container/kfifo_old_version/: kfifo.c  kfifo.h
tools/priority_queue/: index_priority_queue.hpp  priority_queue.hpp
tools/test/: CMakeLists.txt  algorithm_main.cpp  avl_tree_check_main.cpp  avl_tree_main.cpp  avl_tree_main2.cpp  avl_tree_main3.cpp  b_and_p_tree_copy_check_main.cpp  b_plus_tree_main.cpp  b_plus_tree_main2.cpp  b_plus_tree_main_debug.cpp  b_plus_tree_main_debug2.cpp  b_tree_main.cpp  b_tree_main2.cpp  b_tree_main_debug.cpp  b_tree_main_debug2.cpp  b_tree_v2_main_debug.cpp  b_tree_v2_main_debug2.cpp  binary_tree2_main.cpp  binary_tree_main.cpp  bs_tree_main.cpp  bt_tree_main.cpp  crc_check_main.cpp  hash_map_main.cpp  index_p_queue_main.cpp  list_main.cpp  map_main.cpp  p_queue_main.cpp  queue_main.cpp  rb_tree_check_main.cpp  rb_tree_main.cpp  rb_tree_main2.cpp  set_main.cpp  stack_main.cpp  string_main.cpp  tree_main.cpp  vector_main.cpp
tools/test_lock_free/: CMakeLists.txt  lock_free_stack_main.cpp  make_test_barrier.sh  mpmc_queue_main.cpp  spsc_queue_main.cpp  test_atomic_main.cpp  test_barrier_main.cpp  test_c_struct.c  test_fifo_struct_main.cpp
tools/test_performance/: CMakeLists.txt  hash_map_performance.cpp  map_performance.cpp  mpmc_performance_test.cpp  spsc_performance_test.cpp
